Python: improve draw_find.py